I02_backend_category_treeview
show static category tree view and expand load child contents

--- a/backend/index.html
+++ b/backend/index.html
@@ -274,7 +274,7 @@
         </header>
 
 
-<div class="wrapper row-offcanvas row-offcanvas-left">
+<div class="wrapper row-offcanvas row-offcanvas-left" style="min-height: 600px;">
             <!-- Left side column. contains the logo and sidebar -->
             <aside class="left-side sidebar-offcanvas">
                 <!-- sidebar: style can be found in sidebar.less -->
@@ -309,7 +309,7 @@
                         </li>
                         <li>
                             <a href="pages/widgets.html">
-                                <i class="fa fa-th"></i> <span>Widgets</span> <small class="badge pull-right bg-green">new</small>
+                                <i class="fa fa-th"></i> <span>Category</span> <small class="badge pull-right bg-green">100</small>
                             </a>
                         </li>
                         <li class="treeview">
@@ -406,7 +406,7 @@
                 </section>
 
                 <!-- Main content -->
-                <section class="content">
+                <section class="content" style="min-height: 600px;" >
 
                     <!-- Small boxes (Stat box) -->
                     <div class="row">
